# codefusion-studio

./: .c8rc  .code-workspace  .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  VERSION.ini  cfs.code-workspace  custom-mocha-reporter.cjs  mkdocs.yml  package.json  pyproject.toml  tsconfig.json
.devcontainer/docs/: Dockerfile  devcontainer.json  export_to_pdf.js
.github/: bug_report.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cfs-ai/: .dockerignore  .editorconfig  .gitignore  README.md  pyproject.toml
cfs-ai/backends/: izer.json  tflm.json
cfs-ai/cli/: Cargo.toml
cfs-ai/cli/src/: main.rs
cfs-ai/examples/: README.md
cfs-ai/scripts/: build.sh  generate_tflm_cortex.sh  package.py  pre_commit_check.sh
cfs-ai/src/cfsai/: __init__.py  __main__.py  backend_manager.py  cli.py  logger.py  ui.py  utils.py
cfs-ai/src/cfsai/backend_runtime/: __init__.py  executor.py  logger.py  server.py
cfs-ai/src/cfsai/backend_tflm/: __init__.py  exceptions.py  extensions.py  local.py
cfs-ai/src/cfsai/container/: client.py  executor.py  utils.py
cfs-ai/src/cfsai/support/: __init__.py
cfs-ai/tests/configs/: adspsc835.cfsconfig  max32690.msdk.cfsconfig  max32690.zephyr41.cfsconfig  max78002.msdk.cfsconfig
cfs-ai/tests/core/: test_aiconfig.py  test_cli_e2e.py  test_cli_edge.py  test_datamodels.py
cfs-ai/tests/data/aiconfig/: optionals.json  types.json
cfs-ai/tests/data/configs/: adspsc835.cfsconfig  max32690.msdk.cfsconfig  max32690.zephyr41.cfsconfig  max78002.msdk.cfsconfig
cfs-ai/tests/data/json/: izer.max78002.cm4.cnn.json  profile.max78002.cm4.json  tflm.max78002.cm4.json
cfs-ai/tests/data/models/: ai85-catsdogs-qat8-q.pth.tar  corrupt.tflite
cfs-ai/tests/data/support/: accelerators.json  exec_modes.json  runtimes.json  targets.json  test-datamodel.json
cfs-ai/tests/fuzzing/: strats.py  test_cli_fuzzy.py  test_fuzzing.py
cfs-ai/tests/modules/: test_compat.py  test_izer.py  test_profile.py  test_tflm.py
cfs-ai/tests/tensorflow/: test_adv_ai.py  test_compat_analysis.py  test_nmac_conv2d.py  test_nmac_conv2d_mock.py  test_nmac_dense.py  test_optimization_recomm_mockmodel.py  test_optimization_recomm_realmodel.py  test_resource_profiler.py  test_tflite_parser.py  utils.py
cfs-ai/ui/: ui.json
docs/: conf.py  glossary.md  index.md  requirements.txt
docs/assets/stylesheets/: custom.css
docs/assets/templates/: cover_page.tpl  pdf_overrides.css
docs/release-notes/: 1.0.0.md  1.0.2.md  1.1.0.md  2.0.0.md  2.0.1.md  2.1.0.md  2.2.0.md  2.2.1.md  index.md
docs/resources/: index.md  sdk-resources.md  security-resources.md  third-party-resources.md
docs/tutorials/: index.md
docs/tutorials/gdb-tutorial/: gdb-basics.md  gdb-command-types.md  gdb-commands.md  index.md
docs/tutorials/max32657-zephyr/: blinky.md  index.md  low-power-mode.md
docs/user-guide/: index.md
docs/user-guide/about/: features.md  help.md  index.md  navigation.md  purpose.md  supported-ai-model-formats.md  supported-processors.md  telemetry.md
docs/user-guide/ai-tools/: compat-report.md  index.md  profiling-report.md  supported-ai-model-formats.md
docs/user-guide/build-and-flash/: cfs-settings.md  cfs-terminal.md  tasks.md
docs/user-guide/cfsutil/: catalog.md  cfs-plugins.md  device-tree.md  docker.md  elf-utilities.md  generate.md  index.md  myanalog-auth.md  oclif-plugins.md  package-manager.md  port.md  project.md  socs.md  tasks.md  workspace.md
docs/user-guide/debugging/: connect-hardware.md  debug-an-application.md  debug-interface.md  debug-multi-core-application.md  debug-sharc-fx.md  debug-with-ozone.md  index.md  install-ice-drivers.md  install-jlink-drivers.md  install-olimex-drivers.md  troubleshooting.md
docs/user-guide/developer-tools/: device-tree-view.md  index.md
docs/user-guide/installation/: index.md  install-cfs.md  install-extensions.md  install-jlink-drivers.md  install-olimex-drivers.md  set-up-cfs.md  software-requirements.md
docs/user-guide/plugins/: develop-plugins.md  index.md  plugin-integration-overview.md
docs/user-guide/projects/: cfs-settings.md  cfs-terminal.md  create-new-project.md  index.md  open-and-migrate-example.md  open-project.md  tasks.md  troubleshooting.md
docs/user-guide/resources/: index.md  sdk-resources.md  security-resources.md  third-party-resources.md
docs/user-guide/tools/: cfsutil.md  compat-report.md  device-tree-view.md  elf-file-explorer.md  generate-code.md  index.md  manage-ai-models.md  memory-allocation.md  peripheral-allocation.md  profiling-report.md  profiling.md
docs/user-guide/uninstall/: index.md  uninstall-cfs.md
docs/user-guide/workspaces/: catalog-manager.md  cfs-settings.md  cfs-terminal.md  create-new-workspace.md  create-workspace-from-ai-model.md  deploy-and-profile-ai-model.md  index.md  migrate-project-to-system-planner.md  open-and-migrate-example.md  open-workspace.md  tasks.md  troubleshooting.md  zephyr.md
sample-config-files/: adsp-21835w-bga_ed.cfsconfig  adsp-sc835w-bga_ed.cfsconfig  max32650-tqfp.cfsconfig  max32650-wlp.cfsconfig  max32655-ctbga.cfsconfig  max32655-wlp.cfsconfig  max32657-tz.cfsconfig  max32657-wlp.cfsconfig  max32658-wlp.cfsconfig  max32660-tqfn20.cfsconfig  max32660-tqfn24.cfsconfig  max32660-wlp.cfsconfig  max32662-tqfn.cfsconfig  max32662-wlp.cfsconfig  max32666-ctbga.cfsconfig  max32666-wlp.cfsconfig  max32670-tqfn.cfsconfig  max32670-wlp.cfsconfig  max32672-tqfn40.cfsconfig  max32672-tqfn56.cfsconfig  max32675c-lga.cfsconfig  max32690-tqfn.cfsconfig  max32690-wlp.cfsconfig  max78000.cfsconfig  max78002.cfsconfig  persisted-sample.cfsworkspace  preconfigured-max32690-wlp.cfsconfig  sample.cfsworkspace
scripts/copyright/: update-copyright.py
scripts/copyright/test/: correct-copyright-date-range-test.ts  correct-copyright-single-date-test.ts  no-copyright-test.ts  wrong-copyright-date-range-test.ts  wrong-copyright-single-date-test.ts
scripts/subtree/: ccm-lib.sh
site/: index.html  versions.json
(+51 files in other folders)
