[project]
name = "cfsai"
version = "2.2.0"
description = "A tool to help you put your AI model on hardware"
readme = "README.md"
authors = [
    { name = "Codefusion Studio Team", email = "processor.tools.support@analog.com" }
]
requires-python = "==3.11.9"
dependencies = [
    "cfsai-backend-izer",
    "cfsai-backend-tflm",
    "cfsai-compatibility-analyzer",
    "cfsai-resource-profiler",
    "cfsai-model-parser",
    "cfsai-tflite",
    "cfsai-types",
    "pydantic==2.11.3",
]

[tool.uv.sources]
cfsai-tflite = { workspace = true }
cfsai-backend-izer = { workspace = true }
cfsai-backend-tflm = { workspace = true }
cfsai-types = { workspace = true }
cfsai-model-parser = { workspace = true }
cfsai-compatibility-analyzer = { workspace = true }
cfsai-resource-profiler = { workspace = true }

[project.scripts]
cfsai = "cfsai.cli:cli"

[dependency-groups]
dev = [
    "flit>=3.12.0",
    "hypothesis>=6.131.21",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "tensorflow>=2.0",
]

[build-system]
requires = ["flit-core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
ignore_missing_imports = true
files = [
    "src/", 
    "packages/cfsai-types/src", 
    "packages/cfsai-tflite/src",
    "packages/cfsai-backend-izer/src/",
]
exclude = [
    "scripts/",
    "packages/cfsai-tflite/build_hook.py",
    "packages/cfsai-model-parser",
    "packages/cfsai-resource-profiler",
    "packages/cfsai-compatibility-analyzer",
    "packages/cfsai-backend-izer/src/cfsai_backend_izer/izer/",
]

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle (Error)
    "F", # pyflakes
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort (import sorting)
    "UP", # pyupgrade (upgrade suggestions)
    "ANN", # Type annotations,
    "YTT", # flake8-2020
    "S", # flake8-bandit
    "PYI", # flake8-pyi
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "PERF", # Peflint
    "W", # pycodestyle (Warning)
    "RUF", # Ruff specific rules
    "ERA001", # Commented out code
    #"TRY", # Possibly implement this in the future after exception refactoring
]
ignore = [
    "D100", # Allow undocumented public modules
    "D212", # Allow docstring summary not on first line
    "D205", # Allow missing blank line after summary (doc strings)
    "D104", # Allow undocumented public packages
    "B904", # Allow raise with `from` inside an except block
    "UP045", # Allow the use of `Optional`
    "UP007", # Allow use of `Union`
    "ANN002", # Allow no annotations for *args
    "ANN003", # Allow no annotations for **kwargs,
    "ANN401", # Allowing typing.Any. This is just required in certain areas.
    "S606", # Allow starting a process without a shell
    "S603", # Same as S606 reasoning
    "Q000", # Allow single quotes
    "W293", # Allow a blank line with whitespace
    "W291", # Allow trailing whitespace
]
pydocstyle.convention = "google"

[tool.ruff]
src = [
    "src/", 
    "packages/cfsai-types/src", 
    "packages/cfsai-tflite/src",
    "packages/cfsai-backend-izer/src/"
]
exclude = [
    "scripts", 
    "dist", 
    "**/demos", 
    "tests",
    "packages/cfsai-tflite/build_hook.py",
    "packages/cfsai-tflite/src/cfsai_tflite/schema",
    "packages/cfsai-backend-izer/src/cfsai_backend_izer/izer/"
]

[tool.uv.workspace]
members = [
    "packages/cfsai-tflite",
    "packages/cfsai-types",
    "packages/cfsai-backend-izer",
    "packages/cfsai-backend-tflm",

    # Advanced AI Tools
    "packages/cfsai-resource-profiler",
    "packages/cfsai-compatibility-analyzer",
    "packages/cfsai-model-parser"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
